--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -58,7 +58,8 @@ h2 {
 
 .card {
   background-color: white;
-  border-radius: 4px;
+  /*border-radius: 4px;*/
+  border-radius: 40%;
   box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
   padding: 1rem;
   width: 20rem;
@@ -67,6 +68,7 @@ h2 {
 
 .actions {
   text-align: center;
+  width: 100%;
   /*text-align: right;*/
 }
 
@@ -123,4 +125,8 @@ h2 {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+}
+
+.hometown {
+  width: 100%;
 }
