Added navigation elements to About Me page

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,12 +5,12 @@
 body {
   font-family: sans-serif;
   margin: 3rem;
-  background-color: #dfdfdf;
+  background-color: #053a83cf;
 }
 
 h1,
 h2 {
-  color: #333333;
+  color: #ffffff;
 }
 
 /*
