--- a/frontend/src/components/layout/MainNavigation.module.css
+++ b/frontend/src/components/layout/MainNavigation.module.css
@@ -1,3 +1,5 @@
+
+
 .header {
   width: 100%;
   height: 5rem;
@@ -26,16 +28,63 @@
   margin-left: 3rem;
 }
 
+ /* Creates hover animation on Navigation Links*/
+header a {
+  text-decoration: none;
+  font-size: 1.5rem;
+  color: #ffffff;
+  display: block; 
+  width: 100%; 
+  padding: 12px; 
+  border-left: 5px solid; 
+  position: relative; 
+  z-index: 2;
+  text-decoration: none;
+  
+  box-sizing: border-box;  
+  -moz-box-sizing: border-box;  
+  -webkit-box-sizing: border-box; 
+}
+
+
+nav li a:hover{ border-bottom: 0px; color: #fff;}
+nav li:first-child a{ border-left: 10px  solid #3498db; }
+nav li:nth-child(2) a{ border-left: 10px solid #ffd071; }
+nav li:nth-child(3) a{ border-left: 10px solid #f0776c; }
+nav li:nth-child(4) a{ border-left: 10px solid #5c4341; }
+nav li:nth-child(5) a{ border-left: 10px solid #d533f16c; }
+nav li:last-child a{ border-left: 10px solid #1abc9c; }
+
+nav li a:hover:after{ width: 100%; }
+nav li:first-child a:after{ background: #3498db; }
+nav li:nth-child(2) a:after{ background: #ffd071; }
+nav li:nth-child(3) a:after{ background: #f0776c; }
+nav li:nth-child(4) a:after{ background: #5c4341; }
+nav li:nth-child(5) a:after{ background: #d533f16c; }
+nav li:last-child a:after{ background: #1abc9c; }
+
+nav li a:after { 
+  content: "";
+  height: 100%; 
+  left: 0; 
+  top: 0; 
+  width: 0px;  
+  position: absolute; 
+  transition: all 0.3s ease 0s; 
+  -webkit-transition: all 0.3s ease 0s; 
+  z-index: -1;
+}
+
 .header a {
   text-decoration: none;
   font-size: 1.5rem;
-  color: #fcb8d2;
+  color: #ffffff;
 }
 
 .header a:hover,
 .header a:active,
 .header a.active {
-  color: white;
+  color: rgba(255, 255, 255, 0.632);
 }
 
 .badge {
