--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -45,8 +45,8 @@ h2 {
   border-color: #9c1458;
 }*/
 .btn:hover {
-  background-color: rgba(0, 0, 0, 1);
-  border-color: rgba(0, 0, 0, 1);
+  background-color: rgba(10, 142, 105, 0.502);
+ 
 }
 
 .btn--alt {
@@ -59,19 +59,25 @@ h2 {
 }
 
 .card {
-  background-color: white;
+  background-color: rgb(255, 255, 255);
   /*border-radius: 4px;*/
   border-radius: 40%;
-  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
-  padding: 1rem;
+  box-shadow: 0 20px 5px rgba(0, 0, 0, 0.2);
+  padding: 2rem;
   width: 20rem;
-  margin: 2rem;
+
+  margin: 2.7rem;
+    
 }
 
 .actions {
   text-align: center;
   width: 100%;
+
   /*text-align: right;*/
+}
+.btn{
+  box-shadow: 5px 5px 10px 2px rgba(0,0,0,.8);
 }
 
 /*.modal {
@@ -95,6 +101,7 @@ h2 {
   height: 100vh;
   top: 0;
   left: 0;
+  
 }
 
 .memberPhoto {
@@ -103,12 +110,15 @@ h2 {
   margin-right: auto;
   width: 9rem;
   height: 10rem;
+  filter:drop-shadow(10px 10px 4px #000000ad);
 }
 
 .photoContainer {
   display: block;
   margin-left: auto;
   margin-right: auto;
+  
+
 }
 
 .column {
