--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -10,9 +10,13 @@ body {
 
 h1{
   color: white;
+  text-shadow: 0 5px 5px rgba(0, 0, 0, 0.202);
+  font-family: 'Catamaran', sans-serif;
+  
 }
 h2 {
   color: #000000;
+  font-family: 'Catamaran', sans-serif;
 }
 
 /*
@@ -62,7 +66,7 @@ h2 {
   background-color: rgb(255, 255, 255);
   /*border-radius: 4px;*/
   border-radius: 40%;
-  box-shadow: 0 20px 5px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 20px 5px rgba(0, 0, 0, 0.102);
   padding: 2rem;
   width: 20rem;
 
@@ -77,7 +81,8 @@ h2 {
   /*text-align: right;*/
 }
 .btn{
-  box-shadow: 5px 5px 10px 2px rgba(0,0,0,.8);
+  box-shadow: 5px 5px 10px 2px rgba(0, 0, 0, 0.164);
+  font-family: 'Catamaran', sans-serif;
 }
 
 /*.modal {
@@ -110,7 +115,7 @@ h2 {
   margin-right: auto;
   width: 9rem;
   height: 10rem;
-  filter:drop-shadow(10px 10px 4px #000000ad);
+  filter:drop-shadow(10px 10px 4px #0000000f);
 }
 
 .photoContainer {
