--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -56,10 +56,19 @@ h2 {
   background-color: #f8dae9;
 }
 
+.aboutUsCard {
+  background-color: white;
+  border-radius: 4px;
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
+  padding: 1rem;
+  width: 20rem;
+  margin: 2rem;
+}
+
 .card {
   background-color: white;
-  /*border-radius: 4px;*/
-  border-radius: 40%;
+  border-radius: 4px;
+  /*border-radius: 40%;*/
   box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
   padding: 1rem;
   width: 20rem;
