--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -18,18 +18,29 @@ h2 {
   font-family: "Catamaran", sans-serif;
 }
 
-/*
-.btn {
-  font: inherit;
-  padding: 0.5rem 1.5rem;
-  cursor: pointer;
+.aboutUsCard {
+  background-color: white;
   border-radius: 4px;
-  background-color: #800040;
-  color: white;
-  border: 1px solid #800040;
-  margin: 0 1rem;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  padding: 1rem;
+  width: 20rem;
+  margin: 2rem;
 }
-*/
+
+.actions {
+  text-align: center;
+  width: 100%;
+}
+
+.backdrop {
+  position: fixed;
+  z-index: 1;
+  background-color: rgba(0, 0, 0, 0.75);
+  width: 100%;
+  height: 100vh;
+  top: 0;
+  left: 0;
+}
 
 .btn {
   font: inherit;
@@ -41,12 +52,10 @@ h2 {
   border: 1px solid rgba(43, 140, 129, 255);
   margin: 0 1rem;
   text-align: center;
+  box-shadow: 5px 5px 10px 2px rgba(0, 0, 0, 0.164);
+  font-family: "Catamaran", sans-serif;
 }
 
-/*.btn:hover {
-  background-color: #9c1458;
-  border-color: #9c1458;
-}*/
 .btn:hover {
   background-color: rgba(10, 142, 105, 0.502);
 }
@@ -60,58 +69,31 @@ h2 {
   background-color: #f8dae9;
 }
 
-.aboutUsCard {
-  background-color: white;
-  border-radius: 4px;
-  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
-  padding: 1rem;
-  width: 20rem;
-  margin: 2rem;
-}
-
 .card {
   background-color: white;
   border-radius: 4px;
-  /*border-radius: 40%;*/
-  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
+  /* alternative border radius to make the cards rounder
+  border-radius: 40%;*/
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   padding: 1rem;
   width: 20rem;
 
   margin: 2.7rem;
 }
 
-.actions {
-  text-align: center;
-  width: 100%;
-
-  /*text-align: right;*/
-}
-.btn {
-  box-shadow: 5px 5px 10px 2px rgba(0, 0, 0, 0.164);
-  font-family: "Catamaran", sans-serif;
+.column {
+  float: left;
+  width: 20%;
 }
 
-/*.modal {
-  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
-  border-radius: 6px;
-  background-color: white;
-  padding: 1rem;
-  text-align: center;
-  width: 30rem;
-  z-index: 10;
-  position: fixed;
-  top: 20vh;
-  left: calc(50% - 15rem);
-}*/
+.flexbox-container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
 
-.backdrop {
-  position: fixed;
-  z-index: 1;
-  background-color: rgba(0, 0, 0, 0.75);
+.hometown {
   width: 100%;
-  height: 100vh;
-  top: 0;
-  left: 0;
 }
 
 .memberPhoto {
@@ -129,11 +111,6 @@ h2 {
   margin-right: auto;
 }
 
-.column {
-  float: left;
-  width: 20%;
-}
-
 /* Clear floats after the columns */
 .row:after {
   content: "";
@@ -141,12 +118,36 @@ h2 {
   clear: both;
 }
 
-.flexbox-container {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
+/* alternative button style
+.btn {
+  font: inherit;
+  padding: 0.5rem 1.5rem;
+  cursor: pointer;
+  border-radius: 4px;
+  background-color: #800040;
+  color: white;
+  border: 1px solid #800040;
+  margin: 0 1rem;
 }
+*/
 
-.hometown {
-  width: 100%;
-}
+/* alternative button hover colors
+.btn:hover {
+  background-color: #9c1458;
+  border-color: #9c1458;
+}*/
+
+/* possible code for a modal w/ backdrop
+.modal 
+{
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
+  border-radius: 6px;
+  background-color: white;
+  padding: 1rem;
+  text-align: center;
+  width: 30rem;
+  z-index: 10;
+  position: fixed;
+  top: 20vh;
+  left: calc(50% - 15rem);
+}*/
