Added background Gradience

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,7 +5,23 @@
 body {
   font-family: sans-serif;
   margin: 3rem;
-  background-color: #053a83cf;
+  background: linear-gradient(-45deg, #97c5ed, #4658cd, #23a6d5, #1455af);
+  background-size: 400% 400%;
+  animation: gradient 15s ease infinite;
+  height: 100vh;
+  
+}
+
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
 }
 
 h1 {
