--- a/frontend/src/pages/SignupPage.module.css
+++ b/frontend/src/pages/SignupPage.module.css
@@ -10,16 +10,27 @@
   display: block;
   font-weight: bold;
   margin-bottom: 0.5rem;
+  margin-left: 25%;
+  margin-right:25%;
+  width: 50%;
 }
 
 .control input,
 .control textarea {
-  display: block;
+  display: inline-block;
+  
   font: inherit;
   border-radius: 4px;
   border: 1px solid #ccc;
   padding: 0.25rem;
-  width: 100%;
+ 
+  margin-left: 25%;
+  margin-right:25%;
+  width: 50%;
+
+  
+    
+  
 }
 
 .actions {
@@ -30,16 +41,16 @@
 .actions button {
   font: inherit;
   cursor: pointer;
-  background-color: #77002e;
+  background-color: rgba(43, 140, 129, 255);
   color: white;
   padding: 0.5rem 1.5rem;
-  border: 1px solid #77002e;
+  border: 1px rgba(43, 140, 129, 155);
   border-radius: 4px;
   font-weight: bold;
 }
 
 .actions button:hover,
 .actions button:active {
-  background-color: #a50e48;
-  border-color: #a50e48;
+  background-color: rgba(43, 140, 129, 0.401);
+  border-color: rgba(43, 140, 129, 155);
 }
