--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -9,7 +9,6 @@ body {
   background-size: 400% 400%;
   animation: gradient 15s ease infinite;
   height: 100vh;
-  
 }
 
 @keyframes gradient {
@@ -70,6 +69,12 @@ h2 {
   text-align: center;
   box-shadow: 5px 5px 10px 2px rgba(0, 0, 0, 0.164);
   font-family: "Catamaran", sans-serif;
+}
+
+.btn-signup {
+  width: 100px;
+  background-color: rgba(43, 140, 129, 255);
+  color: rgba(43, 140, 129, 255);
 }
 
 .btn:hover {
