--- a/frontend/src/components/layout/MainNavigation.module.css
+++ b/frontend/src/components/layout/MainNavigation.module.css
@@ -1,6 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Catamaran:wght@200&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Catamaran:wght@200&display=swap");
 
 .header {
   width: 100%;
@@ -8,20 +7,18 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background-color: rgba(43, 140, 129, 255);
+  background-color: black;
+  /*background-color: rgba(43, 140, 129, 255);*/
   padding: auto;
   text-shadow: 0 5px 5px rgba(0, 0, 0, 0.202);
-  font-family: 'Catamaran', sans-serif;
-  
+  font-family: "Catamaran", sans-serif;
 }
 
-.logo  {
+.logo {
   font-size: 2rem;
   color: white;
   font-weight: bold;
-  font-family: 'Fredoka One' !important; 
-  
-
+  font-family: "Fredoka One" !important;
 }
 
 .header ul {
@@ -36,51 +33,79 @@
   margin-left: 3rem;
 }
 
- /* Creates hover animation on Navigation Links*/
+/* Creates hover animation on Navigation Links*/
 header a {
   text-decoration: none;
   font-size: 1.5rem;
   color: #ffffff;
-  display: block; 
-  width: 100%; 
-  padding: 12px; 
-  
-  position: relative; 
+  display: block;
+  width: 100%;
+  padding: 12px;
+
+  position: relative;
   z-index: 2;
   text-decoration: none;
-  
-  box-sizing: border-box;  
-  -moz-box-sizing: border-box;  
-  -webkit-box-sizing: border-box; 
+
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
   /*font-family: 'Catamaran', sans-serif;*/
 }
 
+nav li a:hover {
+  border-bottom: 0px;
+  color: #fff;
+}
+nav li:first-child a {
+  border-left: 10px solid #3498db;
+}
+nav li:nth-child(2) a {
+  border-left: 10px solid #ffd071;
+}
+nav li:nth-child(3) a {
+  border-left: 10px solid #f0776c;
+}
+nav li:nth-child(4) a {
+  border-left: 10px solid #5c4341;
+}
+nav li:nth-child(5) a {
+  border-left: 10px solid #d533f16c;
+}
+nav li:last-child a {
+  border-left: 10px solid #1abc9c;
+}
 
-nav li a:hover{ border-bottom: 0px; color: #fff;}
-nav li:first-child a{ border-left: 10px  solid #3498db; }
-nav li:nth-child(2) a{ border-left: 10px solid #ffd071; }
-nav li:nth-child(3) a{ border-left: 10px solid #f0776c; }
-nav li:nth-child(4) a{ border-left: 10px solid #5c4341; }
-nav li:nth-child(5) a{ border-left: 10px solid #d533f16c; }
-nav li:last-child a{ border-left: 10px solid #1abc9c; }
+nav li a:hover:after {
+  width: 100%;
+}
+nav li:first-child a:after {
+  background: #3498db;
+}
+nav li:nth-child(2) a:after {
+  background: #ffd071;
+}
+nav li:nth-child(3) a:after {
+  background: #f0776c;
+}
+nav li:nth-child(4) a:after {
+  background: #5c4341;
+}
+nav li:nth-child(5) a:after {
+  background: #d533f16c;
+}
+nav li:last-child a:after {
+  background: #1abc9c;
+}
 
-nav li a:hover:after{ width: 100%; }
-nav li:first-child a:after{ background: #3498db; }
-nav li:nth-child(2) a:after{ background: #ffd071; }
-nav li:nth-child(3) a:after{ background: #f0776c; }
-nav li:nth-child(4) a:after{ background: #5c4341; }
-nav li:nth-child(5) a:after{ background: #d533f16c; }
-nav li:last-child a:after{ background: #1abc9c; }
-
-nav li a:after { 
+nav li a:after {
   content: "";
-  height: 100%; 
-  left: 0; 
-  top: 0; 
-  width: 0px;  
-  position: absolute; 
-  transition: all 0.3s ease 0s; 
-  -webkit-transition: all 0.3s ease 0s; 
+  height: 100%;
+  left: 0;
+  top: 0;
+  width: 0px;
+  position: absolute;
+  transition: all 0.3s ease 0s;
+  -webkit-transition: all 0.3s ease 0s;
   z-index: -1;
 }
 
@@ -107,5 +132,4 @@ nav li a:after {
 .dotSmallLogo {
   height: 2.2rem;
   width: 2.2rem;
-  
 }
