--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -24,7 +24,6 @@ body {
 }
 
 h1 {
-  color: white;
   text-shadow: 0 5px 5px rgba(0, 0, 0, 0.202);
   font-family: "Catamaran", sans-serif;
 }
@@ -137,6 +136,33 @@ h2 {
   content: "";
   display: table;
   clear: both;
+}
+
+#flag-container {
+  height: 252px;
+  background-color: white;
+}
+
+#flag-container img {
+  width: 100%;
+  height: 100%;
+}
+
+#info-container select {
+  display: block;
+  margin: 20px auto;
+  padding: 5px;
+  min-width: 100%;
+  width: 200px;
+  color: black;
+  font-size: 15px;
+  font-weight: 900;
+  text-align-last: center;
+}
+
+#info-container p {
+  padding: 0 10px;
+  font-weight: 600;
 }
 
 /* alternative button style
