--- a/frontend/src/components/layout/MainNavigation.module.css
+++ b/frontend/src/components/layout/MainNavigation.module.css
@@ -7,8 +7,8 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background-color: black;
-  /*background-color: rgba(43, 140, 129, 255);*/
+  /* background-color: black; */
+  /* background-color: rgba(43, 140, 129, 255); */
   padding: auto;
   text-shadow: 0 5px 5px rgba(0, 0, 0, 0.202);
   font-family: "Catamaran", sans-serif;
