--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,7 +3,7 @@
 }
 
 body {
-  font: sans-serif;
+  font: "Ubuntu";
   margin: 3rem;
   background: linear-gradient(-45deg, #97edcf, #4658cd, #23a6d5, #1455af);
   background-image: url("../src/components/images/dot-mountain-bg.jpg");
@@ -126,24 +126,24 @@ h2 {
   position: absolute;
   top: 0px;
   left: 0px;
-  animation: cowmove 5s linear infinite;
+  animation: cowmove 10s linear infinite;
 }
 
 @keyframes cowmove {
   0% {
-    transform: translateX(100px) rotate(0);
+    transform: translateX(0px) rotate(0);
   }
   30% {
-    transform: translateX(400px) rotate(0);
+    transform: translateX(500px) rotate(0);
   }
   50% {
-    transform: translateX(400px) rotate(0);
+    transform: translateX(500px) rotate(0);
   }
   80% {
-    transform: translateX(100px) rotate(0);
+    transform: translateX(0px) rotate(0);
   }
   100% {
-    transform: translateX(100px) rotate(0);
+    transform: translateX(0px) rotate(0);
   }
 }
 
