--- a/frontend/src/components/layout/MainNavigation.module.css
+++ b/frontend/src/components/layout/MainNavigation.module.css
@@ -14,13 +14,6 @@
   font-family: "Catamaran", sans-serif;
 }
 
-.logo {
-  font-size: 2rem;
-  color: white;
-  font-weight: bold;
-  font-family: "Fredoka One" !important;
-}
-
 .header ul {
   list-style: none;
   margin: 0;
@@ -109,16 +102,10 @@ nav li a:after {
   z-index: -1;
 }
 
-.header a {
-  text-decoration: none;
-  font-size: 1.5rem;
-  color: #ffffff;
-}
-
-.header a:hover,
-.header a:active,
-.header a.active {
-  color: rgba(255, 255, 255, 0.632);
+.logo {
+  font-size: 2rem;
+  color: white;
+  font-family: "Ariel";
 }
 
 .badge {
@@ -132,4 +119,23 @@ nav li a:after {
 .dotSmallLogo {
   height: 2.2rem;
   width: 2.2rem;
+}
+
+link.dotCornerLogo {
+  font: white;
+}
+
+#dotCornerLogo {
+  font: white;
+}
+.header a {
+  text-decoration: none;
+  font-size: 1.5rem;
+  color: black;
+}
+
+.header a:hover,
+.header a:active,
+.header a.active {
+  color: rgba(255, 255, 255, 0.632);
 }
