--- a/frontend/src/components/layout/MainNavigation.module.css
+++ b/frontend/src/components/layout/MainNavigation.module.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Catamaran:wght@200&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Merriweather&display=swap");
 
 .header {
   width: 100%;
@@ -11,7 +12,7 @@
   /* background-color: rgba(43, 140, 129, 255); */
   padding: auto;
   text-shadow: 0 5px 5px rgba(0, 0, 0, 0.202);
-  font-family: "Catamaran", sans-serif;
+  font-family: "Merriweather";
 }
 
 .header ul {
@@ -105,7 +106,7 @@ nav li a:after {
 .logo {
   font-size: 2rem;
   color: white;
-  font-family: "Ariel";
+  font-family: "Merriweather";
 }
 
 .badge {
@@ -130,7 +131,8 @@ link.dotCornerLogo {
 }
 .header a {
   text-decoration: none;
-  font-size: 1.5rem;
+  font: "Merriweather";
+  size: 1.5rem;
   color: black;
 }
 
