--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -165,6 +165,36 @@ h2 {
   margin: 2.7rem;
 }
 
+.card4 {
+  background-color: #ae1623;
+  border-radius: 4px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  padding: 1rem;
+  width: 30rem;
+  height: 680px;
+  margin: 2.7rem;
+}
+
+.card5 {
+  background-color: #90bc1f;
+  border-radius: 4px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  padding: 1rem;
+  width: 30rem;
+  height: 680px;
+  margin: 2.7rem;
+}
+
+.card6 {
+  background-color: #1abc9c;
+  border-radius: 4px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  padding: 1rem;
+  width: 30rem;
+  height: 680px;
+  margin: 2.7rem;
+}
+
 .column {
   float: left;
   width: 20%;
