--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -252,6 +252,19 @@ h2 {
   filter: drop-shadow(10px 10px 4px #0000000f);
 }
 
+.modal {
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
+  border-radius: 6px;
+  background-color: white;
+  padding: 1rem;
+  text-align: center;
+  width: 30rem;
+  z-index: 10;
+  position: fixed;
+  top: 20vh;
+  left: calc(50% - 15rem);
+}
+
 .photoContainer {
   display: block;
   margin-left: auto;
@@ -309,19 +322,4 @@ h2 {
 .btn:hover {
   background-color: #9c1458;
   border-color: #9c1458;
-}*/
-
-/* possible code for a modal w/ backdrop
-.modal 
-{
-  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
-  border-radius: 6px;
-  background-color: white;
-  padding: 1rem;
-  text-align: center;
-  width: 30rem;
-  z-index: 10;
-  position: fixed;
-  top: 20vh;
-  left: calc(50% - 15rem);
 }*/
