--- a/frontend/src/components/layout/MainNavigation.module.css
+++ b/frontend/src/components/layout/MainNavigation.module.css
@@ -46,6 +46,23 @@ header a {
   /*font-family: 'Catamaran', sans-serif;*/
 }
 
+/*bounce effect on hover*/
+a{
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-property: transform;
+  transition-property: transform;
+}
+a:hover, a:focus, a:active{
+  -webkit-transform: scale(1.1);
+  transform: scale(1.1);
+}
+
 nav li a:hover {
   border-bottom: 0px;
   color: #fff;
