--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,13 +7,11 @@ body {
   font-family: "Merriweather", serif;
   margin: 3rem;
   background: linear-gradient(-45deg, #97edcf, #4658cd, #23a6d5, #1455af);
-  background-image: url("../src/components/images/dot-mountain-bg.jpg");
+  background-image: url("https://firebasestorage.googleapis.com/v0/b/dot-auth-dev.appspot.com/o/profile-photos%2Fdot-mountain-bg.jpg?alt=media&token=9545d786-cfae-48d7-90f1-b70d89e089bc");
   background-size: 400% 400%;
   animation: nudge 15s ease infinite alternate;
   height: 100vh;
 }
-
-
 
 @keyframes gradient {
   0% {
@@ -26,13 +24,13 @@ body {
     background-position: 0% 50%;
   }
 }
-.p{
+.p {
   text-shadow: 0 5px 5px rgba(0, 0, 0, 0.202);
 }
 
 h1 {
   text-shadow: 0 5px 5px rgba(0, 0, 0, 0.202);
-  color:#000000;
+  color: #000000;
   font-family: "Merriweather", serif;
 }
 h2 {
@@ -110,7 +108,6 @@ h2 {
   width: 100px;
   background-color: rgba(43, 140, 129, 255);
   color: rgba(43, 140, 129, 255);
- 
 }
 
 .btn:hover {
@@ -140,11 +137,11 @@ h2 {
   width: 30rem;
   margin: 2.7rem;
 }
-.card-title{
-  color:#000000;
+.card-title {
+  color: #000000;
 }
-.card-text{
-  color:#000000;
+.card-text {
+  color: #000000;
 }
 
 .card1 {
@@ -249,7 +246,7 @@ h2 {
 
 .homepageDiv {
   /* background-color: white; */
-  background-image: url("../src/components/images/dot-mountain-bg.jpg");
+  background-image: url("https://firebasestorage.googleapis.com/v0/b/dot-auth-dev.appspot.com/o/profile-photos%2Fdot-mountain-bg.jpg?alt=media&token=9545d786-cfae-48d7-90f1-b70d89e089bc");
 }
 
 .hometown {
@@ -317,8 +314,6 @@ h2 {
   padding: 0 10px;
   font-weight: 600;
 }
-
-
 
 /* alternative button style
 .btn {
